Altered login to call function to verify details. Added argon2 to deal with hashing. Fucntion currently in server.js though it should be in some database js file made by Saroj and called from the server.js file. Also made some minor alterations in css and html trying to fix an issue with the website on iphones.

--- a/public/index/styles/indexLandscapeStyles.css
+++ b/public/index/styles/indexLandscapeStyles.css
@@ -16,6 +16,7 @@ html, body {
     position: absolute;
     opacity: 0;
     transition: opacity 1.5s ease;
+    -webkit-transition: opacity 1.5s ease;
     z-index: -1;
     background-size: cover;
     background-position: center center;
